[package]
name = "mistletoe"
description = "Mistletoe - the Polyglot Kubernetes Package Manager"
readme = "README.md"
repository = "https://github.com/gsfraley/mistletoe.git"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mistctl"

[dependencies]
anyhow = "1.0"
clap = "4.4"
indexmap = "2.1"
indoc = "2.0"
serde = "1.0"
serde_yaml = "0.9"
wasmer = "4.2"

[dependencies.mistletoe-api]
path = "./mistletoe-api"
version = "0.1.0"

[workspace]
members = [
    "mistletoe-api",
    "mistletoe-bind",
    "mistletoe-macros",
]
exclude = [
    "examples/basic-nginx",
]
