[package]
name = "mistletoe"
description = "Mistletoe - the Polyglot Kubernetes Package Manager"
readme = "README.md"
repository = "https://github.com/gsfraley/mistletoe.git"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mistctl"

[dependencies]
anyhow = "1.0"
clap = "4.4"
colored = "2.1"
git2 = "0.18"
home = "0.5"
indexmap = "2.1"
indoc = "2.0"
once_cell = "1.19"
semver = "1.0"
serde = "1.0"
serde_yaml = "0.9"
tempfile = "3.8"
wasmer = "4.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Foundation"
] }

[dependencies.mistletoe-api]
path = "./mistletoe-api"
version = "0.1.1"

[workspace]
members = [
    "mistletoe-api",
    "mistletoe-bind",
    "mistletoe-macros",
]
exclude = [
    "examples/nginx-example",
]
