[package]
name = "mistletoe-api"
description = "API objects and interfaces for the Mistletoe Package Manager"
readme = "README.md"
repository = "https://github.com/gsfraley/mistletoe.git"
license = "Apache-2.0"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
indoc = "2.0"
