[package]
name = "mistletoe-bind"
description = "Binding helper library for writing Mistletoe packages"
readme = "README.md"
repository = "https://github.com/gsfraley/mistletoe.git"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
serde_yaml = "0.9"

[dependencies.mistletoe-api]
path = "../mistletoe-api"
version = "0.1.1"

[dependencies.mistletoe-macros]
path = "../mistletoe-macros"
version = "0.1.1"
