[package]
name = "mistletoe-namespace-example"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indoc = "2.0"
mistletoe-api = { version = "0.1.2", path = "../../mistletoe-api" }
mistletoe-bind = { version = "0.1.2", path = "../../mistletoe-bind" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
