[package]
name = "mistletoe-nginx-example"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indoc = "2.0"
mistletoe-api = { path = "../../mistletoe-api" }
mistletoe-bind = { path = "../../mistletoe-bind" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
