[package]
name = "mistletoe-example-nginx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
indexmap = "2.1"
indoc = "2.0"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wasm-bindgen = "0.2"

[dependencies.mistletoe-api]
path = "../../mistletoe-api"

[dependencies.mistletoe-macros]
path = "../../mistletoe-macros"
