[package]
name = "mistletoe-example-nginx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indoc = "2.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"

[dependencies.mistletoe-api]
path = "../../mistletoe-api"

[dependencies.mistletoe-bind]
path = "../../mistletoe-bind"
